2004-05-22  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/tar2.test: Skip the test if no pax archiver were found.

	* NEWS: Sync with branch-1-8, and reorganize current entry.

	* automake.in (handle_libraries): Make the diagnostic about
	non standard libraries a warning in foreign packages.  This
	is already the case in handle_ltlibraries.
	(handle_libraries, handle_ltlibraries): Suggest a standard
	library name in the diagnostic, to help newcomers.
	* tests/stdlib.test, tests/stdlib2.test: Check for these
	suggestions.

	Check directory names for unportable names.  Shaking the code
	to check this also led to the removal of the no-"/"-in-SUBDIRS
	restriction, and a fix to _do_recursive_traversal.

	* automake.in (check_directory): New function extracted from
	handle_subdirs, and augmented to check for reserved W32/DOS name.
	(check_directories_in_var): New function.
	(handle_subdirs): Call check_directories_in_var.  Doing so also
	suppress the restriction that SUBDIRS should not contain slashes.
	(scan_autoconf_traces) <AC_CONFIG_AUX_DIR>: Call check_directory
	to ensure the argument exists and is safe.
	* doc/automake.texi (Top level): Do not say that src/subdir
	cannot be put in SUBDIRS.
	(Dist): Mention that distdir and top_distdir can be absolute.
	* lib/Automake/Variable.pm (_do_recursive_traversal) Support
	undefined $fun_collect, and fix two bugs introduced with
	skip_ac_subst on 2004-03-07.
	* lib/am/distdir.am (distdir): Use absolute distdir and
	top_distdir when recursing, because we can no longer prepend only
	`..' in case of SUBDIRS with `/'.
	* tests/auxdir4.test, tests/subdir9.test: New files.
	* tests/Makefile.am (TESTS): Add auxdir4.test.
	* tests/cond2.test, tests/subdir7.test: Augment to check location
	in diagnostics.

2004-05-21  Eric Blake  <ebb9@byu.net>  (tiny changes)

	* tests/txinfo22.test (AC_CONFIG_AUX_DIR): Use aux1, not aux, for
	cygwin compatibility.
	* tests/yacc6.test (AC_CONFIG_AUX_DIR): Likewise.
