@@ -1,5 +1,11 @@
 2004-05-22  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* automake.in (scan_autoconf_traces): Trace for LT_SUPPORTED_TAG
+	instead of AC_LIBTOOL_TAGS, since that how CVS Libtool has been
+	changed.
+	* tests/libtool3.test: Do not grep for --tag=CC, since CVS
+	Libtool (unlike Libtool 1.5) does not has any CC tag.
+
 	* tests/tar2.test: Skip the test if no pax archiver were found.
 
 	* NEWS: Sync with branch-1-8, and reorganize current entry.
